--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         $('#m').val('');
         return false;
         });
+        socket.on('chat message', function(msg) {
+          $('#messages').append($('<li>').text(msg));
+        });
     });
     </script>
   </body>
