--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,6 @@
         <title>Socket.IO chat</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
     <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; width: 200px; }
-      /* #messages li{
-          border-radius: 25px;
-          padding: 10px;
-          background: dodgerblue;
-      } */
     </style>
   </head>
   <body>
@@ -34,7 +23,7 @@
         return false;
         });
         socket.on('chat message', function(msg) {
-          $('#messages').append($('<li class="speech-bubble">').text(msg));
+          $('#messages').append('<li><span class="speech-bubble">' + msg + '</span></li>');
         });
     });
     
