--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
     <head>
         <title>Socket.IO chat</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet"> 
     <style>
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
+    <div class="container message-output">    
+      <ul id="messages"></ul>
+    </div>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" / placeholder="Write a message.."><button>Send</button>
     </form>
 
     <script src="/socket.io/socket.io.js"></script>
