--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         socket.on('chat message', function(data) {
           var msg = data.message;
           var clientName = data.clientName;
+          console.log(data);
           $('#messages').append($('<li class="speech-bubble">').text(msg));
         });
         socket.on('nameResult', function(result) {
