--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         var socket = io();
         var clientID;
         var currClient = ""; 
+        var userName = "";
         socket.on('connected', function(response) {
           clientID = response.clientID;
           console.log(clientID);
@@ -38,15 +39,29 @@
         socket.on('chat message', function(data) {
           var msg = data.message;
           var clientName = data.clientName;
-          if(currClient != clientName){
-            $('#messages').append('<li><span class="sender-name">' + clientName + '</span><br><span class="speech-bubble">' + msg + '</span></li>');
-            currClient = clientName;
+          if(userName == clientName){
+            if(currClient != clientName){
+              $('#messages').append('<li><span class="sender-name">' + clientName + '</span><br><span class="speech-bubble">' + msg + '</span></li>');
+              currClient = clientName;
+            }
+            else{
+              $('#messages').append('<li><span class="speech-bubble">' + msg + '</span></li>');
+            } 
           }
           else{
-            $('#messages').append('<li><span class="speech-bubble">' + msg + '</span></li>');
+            if(currClient != clientName){
+              $('#messages').append('<li class="overflow-auto"><div class="overflow-auto float-right"><span class="sender-name float-right">' + clientName + '</span><br><span class="speech-bubble">' + msg + '</span></div></li>');
+              currClient = clientName;
+            }
+            else{
+              $('#messages').append('<li style="overflow: auto;"><div class="float-right"><span class="speech-bubble">' + msg + '</span></div></li>');
+            }
           }
         });
         socket.on('nameResult', function(result) {
+          if(userName == ""){
+            userName = result.name;
+          }
           $('#messages').append($('<li class="sender-name text-center">').text('Welcome ' + result.name));
         });
     });
