added next page button *still needs fixing         -agustinus theo

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
     <form action="">
       <input id="m" autocomplete="off" / placeholder="Write a message.."><button>Send</button>
     </form>
+    <div style="width: 100vw; height: 100vh; position: relative; z-index: -10;">
+      <div class="next-page text-center">
+        <span class="arrow right"></span>
+      </div>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
