making the dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,23 @@
       </div>
     </div>
     <div class="canvas" style="background: #282828;">
-      <div class="dashboard">
+      <div class="">
           <div class="dashboard-profile">
-            <div>
-
+            <div style="margin: auto; width: 500px; background: green; overflow: auto; margin-top: 50px;">
+              <div class="float-left" style="overflow: hidden; border-radius: 50%; width: 200px; height: 200px; background:deepskyblue;">
+                <img src="1512297426122.jpg">
+              </div>
+              <h1 class="float-right" style="line-height: 200px; margin-left: 10px;">$Username</h1>
             </div>
-            <div>
-              
+            <div style="background: green; margin-left: 20px;">
+              <ul>
+                <li>Chat</li>
+                <li>Chat</li>
+                <li>Chat</li>
+                <li>Chat</li>
+                <li>Chat</li>
+                <li>Chat</li>
+              </ul>
             </div>
           </div>
       </div>
